# cp-artificial-citation-generator-1.0

./: .gitignore  .pre-commit-config.yaml  README.md  Run.py  pyproject.toml
config/: data_config.json
generator/data_generator/: citation.py  citation_section_generator.py
generator/feature_generator/: etl.py
