[tool.poetry]
name = "cp_artificial_citation_generator_1.0"
version = "0.1.0"
description = "This is cp_artificial_citation_generator_1.0 library"
authors = ["utsab barman <u.barman@elsevier.com>"]
readme = "README.md"
homepage = "https://github.com/elsevier-research/cp-artificial-citation-generator-1.0"
repository = "https://github.com/elsevier-research/cp-artificial-citation-generator-1.0"
keywords = ["cp_artificial_citation_generator_1.0"]


[tool.poetry.dependencies]
python = "~3.7"
boto3 = "^1.13.22"
mlflow = "^1.8.0"
pandas = "^1.0.4"
tensorflow = "^2.2.0"
tensorflow-hub = "^0.8.0"
tqdm = "^4.46.1"
spacy = {extras = ["es_core_web_sm"], version = "^2.2.4"}
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-html = "^2.1.0"
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.770"
pre-commit = "^2.1.1"

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/resources
  | tests/docker
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
